# dotnet-extensions

./: .editorconfig  .gitignore  CLAUDE.md  Directory.Build.props  README.md  bitwarden-dotnet.sln  bitwarden-dotnet.slnx  global.json  package-lock.json  package.json
.claude/: CLAUDE.md
.claude/docs/: bre-1932-release-workflow-architecture.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  renovate.json
.github/workflows/: build-rust-cross-platform.yml  build.yml  cleanup-release-branches.yml  cut-release.yml  pack-and-release.yml  prerelease.yml  publish.yml  release.yml  review-code.yml  review-issue.yml  review-pr-comment.yml  scan.yml  start-release.yml  test.yml  version-bump.yml
docs/: diagnostics.md  release-process.md
extensions/Bitwarden.Core/perf/: AccessTokenTests.cs  Bitwarden.Core.Microbenchmarks.csproj  Program.cs  packages.lock.json
extensions/Bitwarden.Core/src/: Bitwarden.Core.csproj  BitwardenEnvironment.cs  BitwardenIdentityClient.cs  BitwardenSecretsClient.cs  IdentityAuthenticatingHandler.cs  README.md  (+1 more)
extensions/Bitwarden.Extensions.Configuration/: README.md
extensions/Bitwarden.Opaque/rust/: Cargo.toml
extensions/Bitwarden.Opaque/rust/src/: lib.rs
extensions/Bitwarden.Opaque/rust/src/ffi/: mod.rs  types.rs
extensions/Bitwarden.Opaque/rust/src/opaque/: mod.rs  types.rs
extensions/Bitwarden.Server.Sdk/: README.md
extensions/Bitwarden.Server.Sdk.Authentication/: README.md
extensions/Bitwarden.Server.Sdk.Features/: README.md
scripts/: CreateExtension.ps1  PruneReleaseBranches.ps1  UpdatePackageVersion.ps1
(+337 files in other folders)
