[package]
name = "opaque-ke-binding"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.5.3"
digest = "0.10.7"
generic-array = "0.14.7"
hex = "0.4.3"
opaque-ke = { version = "3.0.0", features = ["std", "argon2", "curve25519"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
voprf = "0.5.0"
zeroizing-alloc = "0.1.0"

# Turn on LTO on release mode
[profile.release]
lto = "thin"
codegen-units = 1
